# docuproof

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  brownie-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: quality.yml  tests.yml
contracts/: DocuProof.sol
docuproof/: app.py  blockchain.py  config.py  decorators.py  encoders.py  exceptions.py  ipfs.py  meta.py  models.py  tasks.py  utils.py  views.py
docuproof/api/: views.py
docuproof/templates/: index.html
scripts/: deploy.py  run_ganache_for_ci.sh
tests/: conftest.py  test_encoders.py  test_ipfs.py  test_utils.py  test_views.py
